@@ -1,7 +1,11 @@
 BEGIN {
-    unless ($ENV{RELEASE_TESTING} || $ENV{ONLINE_TESTS}) {
+    unless ($ENV{RELEASE_TESTING} || $ENV{AUTOMATED_TESTING} || $ENV{ONLINE_TESTS}) {
         require Test::More;
-        Test::More::plan(skip_all=>'these online tests require env variable ONLINE_TESTS be set to run');
+        Test::More::plan(skip_all=>'these online tests only for RELEASE/AUTOMATED testing');
+    }
+    if ($ENV{NO_NETWORK_TESTING}) {
+        require Test::More;
+        Test::More::plan(skip_all=> 'network tests disabled by NO_NETWORK_TESTING');
     }
 }
 
