@@ -1,5 +1,8 @@
 	- Prune collection of cruft files.
 	  https://github.com/csirtgadgets/LWPx-ParanoidAgent/issues/26
+	- Make network/thread/automated tests more consistent with CPAN
+	  expectations.
+	  https://github.com/csirtgadgets/LWPx-ParanoidAgent/issues/27
 
 1.12    2016-09-29
 	- Fix to work with Net::DNS 1.03 (RT#108745)
